# zj_new_py_project

./: .gitignore  README.md
langchain-demo/: .env  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
langchain-demo/agent/: __init__.py  agent_app_01.py  agent_app_02.py  agent_app_03.py
langchain-demo/agent/code_agent/: __init__.py  decision.py  main.py  memory.py  perception.py  tool_calling.py
langchain-demo/agent/code_agent/tools/: __init__.py  code_tools.py  (+1 more)
langchain-demo/agent/gui_agent/: __init__.py  execute.py  main.py  model.py  prompts.py
langchain-demo/autoweb/: __init__.py  auto_app_01.py
langchain-demo/browser_sandbox/: __init__.py  hello_world.py  langchain_agent.py  main.py  sandbox_manager.py
langchain-demo/browser_sandbox/public/: vnc-viewer.html
langchain-demo/browseruse_sandbox/: __init__.py
langchain-demo/examples/: __init__.py  langchain_base.py  py_base.py
langchain-demo/sandbox/: __init__.py
langchain-demo/sandbox/browser_use/: __init__.py
langchain-demo/sandbox/play_wright/: __init__.py  hello_world.py  langchain_agent.py  main.py
py-demo/: .env  .gitignore  Makefile  README.md  main.py  pyproject.toml
py-demo/apps/: __init__.py
py-demo/apps/xmind_to_json/: __init__.py  input.xmind  main.py
py-demo/examples/: __init__.py  bs_parser.py  io_base.py  py_base.py  py_struct.py  web_auto.py
py-demo/examples/fast_api/: router.py
py-demo/fast-api/: __init__.py  main.py
py-demo/rest-api/: __init__.py  base_dao.py  main.py  settings.py  user_model.py
py-demo/rest_api/: __init__.py  user_api.py
(+19 files in other folders)
